# ai-stix-mapper

./: .env.example  .gitignore  README.md  pyproject.toml
ai_stix_mapper/: __init__.py  attack.py  builder.py  cli.py  config.py  extractors.py  llm.py  opencti_client.py  prompts.py  schema.py
tests/: test_attack.py  test_builder.py  test_extractors.py
